--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  mobx: ^1.0.0
+  flutter_mobx: ^1.0.0
+  get_it: ^4.0.0
+  firebase_database: ^3.1.3
 
 
   # The following adds the Cupertino Icons font to your application.
