--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   mobx: ^1.0.0
   flutter_mobx: ^1.0.0
   get_it: ^4.0.0
-  firebase_database: ^3.1.3
+#  firebase_database: ^3.1.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -32,6 +32,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.7.2
+  mobx_codegen: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
