--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   get_it: ^4.0.0
   firebase_database: ^3.1.3
   path_provider: ^1.6.5
+  google_maps_flutter: ^0.5.25+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
