--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   firebase_database: ^3.1.3
   path_provider: ^1.6.5
   google_maps_flutter: ^0.5.25+3
+  latlong: ^0.6.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
